objects/Related_Customer_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Customer Contacts</relationshipLabel>
        <relationshipName>Related_Customer_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Priority__c</fullName>
        <label>Customer Business Priority</label>
        <referenceTo>Customer_Business_Priority__c</referenceTo>
        <relationshipLabel>Related Customer Contacts</relationshipLabel>
        <relationshipName>Related_Customer_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key_RCC__c</fullName>
        <label>Unique Key RCC</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related Customer Contacts</label>
    <nameField>
        <displayFormat>RCC-{0000}</displayFormat>
        <label>Related Customer Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Customer Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>